category page designed and cart visibility issue fixed

--- a/assets/scss/components/stencil/navUser/_navUser.scss
+++ b/assets/scss/components/stencil/navUser/_navUser.scss
@@ -166,6 +166,9 @@
 
 	.navUser-action {
 		color: stencilColor("navUser-color");
+		.navUser-item-cartLabel {
+			display: block;
+		}
 
 		// scss-lint:disable NestingDepth
 		&:hover,
